--- a/optionUi/OptionWindow.ui
+++ b/optionUi/OptionWindow.ui
@@ -113,7 +113,7 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
         <enum>QTabWidget::Rounded</enum>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>3</number>
        </property>
        <property name="documentMode">
         <bool>false</bool>
@@ -941,44 +941,24 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
          <item row="0" column="1" colspan="2">
           <widget class="QFrame" name="frame_6">
            <layout class="QGridLayout" name="gridLayout_7">
-            <item row="0" column="2">
-             <widget class="QLabel" name="label_20">
+            <item row="1" column="3">
+             <widget class="QPushButton" name="btnCheckUpdate">
               <property name="text">
-               <string/>
-              </property>
-              <property name="pixmap">
-               <pixmap resource="res.qrc">:/icon/buildwithqt.png</pixmap>
+               <string>Check updates</string>
               </property>
              </widget>
             </item>
-            <item row="3" column="0" colspan="3">
-             <widget class="QLabel" name="label_2">
-              <property name="font">
-               <font>
-                <family>微软雅黑</family>
-                <pointsize>13</pointsize>
-                <kerning>true</kerning>
-               </font>
-              </property>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_22">
               <property name="text">
-               <string>A powerful and easy to use screen recorder.</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+               <string>Copyright © 2021 Dogif.top</string>
               </property>
              </widget>
             </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_17">
-              <property name="font">
-               <font>
-                <family>微软雅黑</family>
-                <pointsize>18</pointsize>
-                <kerning>true</kerning>
-               </font>
-              </property>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_18">
               <property name="text">
-               <string>Dogif</string>
+               <string>Version:V1.2</string>
               </property>
              </widget>
             </item>
@@ -995,24 +975,60 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
               </property>
              </spacer>
             </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_18">
+            <item row="0" column="0">
+             <widget class="QLabel" name="label_17">
+              <property name="font">
+               <font>
+                <family>微软雅黑</family>
+                <pointsize>18</pointsize>
+                <kerning>true</kerning>
+               </font>
+              </property>
               <property name="text">
-               <string>Version:V1.2</string>
+               <string>Dogif</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_22">
+            <item row="0" column="3">
+             <widget class="QLabel" name="label_20">
               <property name="text">
-               <string>Copyright © 2021 Dogif.top</string>
+               <string/>
+              </property>
+              <property name="pixmap">
+               <pixmap resource="res.qrc">:/icon/buildwithqt.png</pixmap>
+              </property>
+              <property name="openExternalLinks">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="btnCheckUpdate">
+            <item row="0" column="2">
+             <widget class="QLabel" name="label_11">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
               <property name="text">
-               <string>Check updates</string>
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://github.com/knightjun/Dogif&quot;&gt;&lt;img src=&quot;:/icon/github_logo.png&quot;/&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              </property>
+              <property name="openExternalLinks">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" colspan="4">
+             <widget class="QLabel" name="label_2">
+              <property name="font">
+               <font>
+                <family>微软雅黑</family>
+                <pointsize>13</pointsize>
+                <kerning>true</kerning>
+               </font>
+              </property>
+              <property name="text">
+               <string>A powerful and easy to use screen recorder.</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
               </property>
              </widget>
             </item>
@@ -1087,8 +1103,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>565</x>
-     <y>172</y>
+     <x>460</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
      <x>463</x>
@@ -1103,8 +1119,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>361</x>
-     <y>172</y>
+     <x>308</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
      <x>427</x>
@@ -1119,8 +1135,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>620</x>
-     <y>173</y>
+     <x>504</x>
+     <y>139</y>
     </hint>
     <hint type="destinationlabel">
      <x>593</x>
@@ -1135,12 +1151,12 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>361</x>
-     <y>172</y>
+     <x>308</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
-     <x>620</x>
-     <y>173</y>
+     <x>504</x>
+     <y>139</y>
     </hint>
    </hints>
   </connection>
@@ -1151,8 +1167,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>344</x>
-     <y>143</y>
+     <x>293</x>
+     <y>113</y>
     </hint>
     <hint type="destinationlabel">
      <x>697</x>
@@ -1167,12 +1183,12 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>cleanSetting()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>479</x>
-     <y>98</y>
+     <x>487</x>
+     <y>78</y>
     </hint>
     <hint type="destinationlabel">
-     <x>412</x>
-     <y>98</y>
+     <x>402</x>
+     <y>78</y>
     </hint>
    </hints>
   </connection>
@@ -1183,12 +1199,12 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>cleanSetting()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>791</x>
-     <y>98</y>
+     <x>801</x>
+     <y>78</y>
     </hint>
     <hint type="destinationlabel">
-     <x>724</x>
-     <y>98</y>
+     <x>716</x>
+     <y>78</y>
     </hint>
    </hints>
   </connection>
@@ -1199,12 +1215,12 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>361</x>
-     <y>172</y>
+     <x>308</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
-     <x>565</x>
-     <y>172</y>
+     <x>460</x>
+     <y>138</y>
     </hint>
    </hints>
   </connection>
@@ -1215,8 +1231,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onTimeFormatChanged(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>566</x>
-     <y>268</y>
+     <x>617</x>
+     <y>216</y>
     </hint>
     <hint type="destinationlabel">
      <x>694</x>
@@ -1231,12 +1247,12 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>725</x>
-     <y>218</y>
+     <x>752</x>
+     <y>162</y>
     </hint>
     <hint type="destinationlabel">
-     <x>319</x>
-     <y>217</y>
+     <x>274</x>
+     <y>165</y>
     </hint>
    </hints>
   </connection>
@@ -1247,8 +1263,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>490</x>
-     <y>281</y>
+     <x>487</x>
+     <y>210</y>
     </hint>
     <hint type="destinationlabel">
      <x>435</x>
@@ -1263,12 +1279,12 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>725</x>
-     <y>310</y>
+     <x>754</x>
+     <y>229</y>
     </hint>
     <hint type="destinationlabel">
-     <x>333</x>
-     <y>309</y>
+     <x>284</x>
+     <y>232</y>
     </hint>
    </hints>
   </connection>
@@ -1279,8 +1295,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>725</x>
-     <y>310</y>
+     <x>754</x>
+     <y>229</y>
     </hint>
     <hint type="destinationlabel">
      <x>155</x>
@@ -1295,8 +1311,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>691</x>
-     <y>281</y>
+     <x>696</x>
+     <y>210</y>
     </hint>
     <hint type="destinationlabel">
      <x>624</x>
@@ -1311,8 +1327,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>283</x>
-     <y>281</y>
+     <x>278</x>
+     <y>210</y>
     </hint>
     <hint type="destinationlabel">
      <x>266</x>
@@ -1327,8 +1343,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>386</x>
-     <y>281</y>
+     <x>382</x>
+     <y>210</y>
     </hint>
     <hint type="destinationlabel">
      <x>470</x>
@@ -1343,8 +1359,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>725</x>
-     <y>218</y>
+     <x>752</x>
+     <y>162</y>
     </hint>
     <hint type="destinationlabel">
      <x>238</x>
@@ -1375,8 +1391,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>468</x>
-     <y>143</y>
+     <x>385</x>
+     <y>113</y>
     </hint>
     <hint type="destinationlabel">
      <x>240</x>
@@ -1391,8 +1407,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>598</x>
-     <y>143</y>
+     <x>481</x>
+     <y>113</y>
     </hint>
     <hint type="destinationlabel">
      <x>533</x>
@@ -1407,8 +1423,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>304</x>
-     <y>204</y>
+     <x>267</x>
+     <y>165</y>
     </hint>
     <hint type="destinationlabel">
      <x>613</x>
@@ -1423,8 +1439,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>aboutQt()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>801</x>
-     <y>70</y>
+     <x>807</x>
+     <y>53</y>
     </hint>
     <hint type="destinationlabel">
      <x>819</x>
@@ -1439,8 +1455,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>801</x>
-     <y>97</y>
+     <x>807</x>
+     <y>76</y>
     </hint>
     <hint type="destinationlabel">
      <x>828</x>
@@ -1456,7 +1472,7 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <hints>
     <hint type="sourcelabel">
      <x>487</x>
-     <y>97</y>
+     <y>76</y>
     </hint>
     <hint type="destinationlabel">
      <x>751</x>
@@ -1471,8 +1487,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>484</x>
-     <y>69</y>
+     <x>423</x>
+     <y>54</y>
     </hint>
     <hint type="destinationlabel">
      <x>610</x>
@@ -1487,8 +1503,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>679</x>
-     <y>153</y>
+     <x>675</x>
+     <y>118</y>
     </hint>
     <hint type="destinationlabel">
      <x>527</x>
@@ -1503,8 +1519,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onOptionChanged(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>454</x>
-     <y>153</y>
+     <x>424</x>
+     <y>118</y>
     </hint>
     <hint type="destinationlabel">
      <x>593</x>
@@ -1519,8 +1535,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onLanguageChanged(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>282</x>
-     <y>299</y>
+     <x>281</x>
+     <y>241</y>
     </hint>
     <hint type="destinationlabel">
      <x>820</x>
@@ -1535,8 +1551,8 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
    <slot>onLosslessChanged(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>230</x>
-     <y>270</y>
+     <x>278</x>
+     <y>210</y>
     </hint>
     <hint type="destinationlabel">
      <x>895</x>
