--- a/optionUi/OptionWindow.ui
+++ b/optionUi/OptionWindow.ui
@@ -956,7 +956,7 @@ QListWidget{background-color: rgb(63, 153, 224);outline:0px;}</string>
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QLabel" name="label_18">
+             <widget class="QLabel" name="lblVersion">
               <property name="text">
                <string>Version:V1.2</string>
               </property>
